<resources>
    <string name="app_name">GITA bank</string>
    <string name="select">Select</string>
    <string name="choose_your_preffered_language">Choose your preferred language</string>
    <string name="select_language">Please select a language</string>
    <string name="language">Language</string>
    <string name="title1">Receive payments from any banking system</string>
    <string name="title2">Shop in world-famous online stores</string>
    <string name="title3">Transfers without commission</string>
    <string name="subtitle1">Connect your bank card, and create accounts in the selected currency.</string>
    <string name="subtitle2">Popular things, big discounts - all this will be available to you.</string>
    <string name="subtitle3">Send and receive money without paying commissions.</string>
    <string name="next">Next →</string>
    <string name="start">Start</string>
    <string name="skip">Skip</string>
    <string name="no_internet_connection">No Internet Connection</string>
    <string name="try_again">Try again</string>
    <string name="please_check_your_internet_settings">Please check your internet settings</string>
    <string name="you_will_get_use_this_to_login_next_time">You will get use this to login next time</string>
    <string name="set_your_pin">Set your PIN</string>
    <string name="set_pin">Save</string>
    <string name="pin_length_error">PIN code is incomplete</string>
    <string name="enter_your_pin">PIN code</string>
    <string name="enter">Continue</string>
    <string name="parolni_unutdingizmi">Forgot password?</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="do_you_have_already_account">Do you have already account?</string>
    <string name="do_you_want_to_create_new_account">Do you want to create new account?</string>
    <string name="verify">We have sent the code verification to your mobile number.</string>
    <string name="pin_error">Invalid pin code</string>
    <string name="password_updated">Password has been updated</string>
    <string name="we_sent_code">We have sent the code verification to your mobile number.</string>
    <string name="card_holder_s_full_name">Card holder\'s full name</string>
    <string name="expiry_date">Expiry Date</string>
    <string name="card_number">Card Number</string>
    <string name="card_name">Card Name</string>
    <string name="add_card">Add Card</string>
    <string name="_0000_0000_0000_0000">0000 0000 0000 0000</string>
    <string name="welcome">Welcome</string>
    <string name="logout">Logout</string>
    <string name="logout_quote">Are you sure you want to log out?</string>
    <string name="back_pressed">Press back twice to exit</string>
    <string name="total_balance">Total Balance</string>
    <string name="last_transactions">Last Transactions</string>
    <string name="history">History</string>
    <string name="choose_card">Choose card</string>
    <string name="resend_code">Resend Code</string>
    <string name="points">______</string>
    <string name="my_card">My card</string>
    <string name="pan">Pan</string>
    <string name="enter_the_details_to_add_new_card">Enter the details to add new card</string>
    <string name="expiration_date">Expiration Date</string>
    <string name="add">Add</string>
    <string name="cards">Cards</string>
    <string name="_00_00">00/00</string>
    <string name="edit">Edit</string>
    <string name="edit_card">Edit Card</string>
    <string name="name">Name</string>
    <string name="choose_color">Choose color</string>
    <string name="transfer_history">Transfer history</string>
    <string name="gita_bank">GITA Bank</string>
    <string name="please_enter_your_phone_number_and_password">Please enter your phone number and password</string>
    <string name="phone">Phone</string>
    <string name="password">Password</string>
    <string name="reset_new_password">Reset new password</string>
    <string name="please_enter_your_phone_number_we_will_send_you_sms_code">Please enter your phone number, we will send you sms code</string>
    <string name="phone_number">Phone number</string>
    <string name="enter_verification_code">Enter verification code</string>
    <string name="new_password">New password</string>
    <string name="set_new_password">Set new password</string>
    <string name="profile">Profile</string>
    <string name="edit_profile">Edit profile</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="enter_your_details_to_register">Enter your details to register</string>
    <string name="send_money">Send Money</string>
    <string name="card_details">Card details:</string>
    <string name="transfer_money">Transfer money</string>
    <string name="transfer_details">Transfer details:</string>
    <string name="amount">Amount:</string>
    <string name="receiver">Receiver:</string>
    <string name="fee">Fee:</string>
    <string name="loading">Loading...</string>
    <string name="choose_nanother_ncard">Choose\nanother\ncard</string>
    <string name="transfer">Transfer</string>
    <string name="enter_card_number">Enter card number</string>
    <string name="transfer_amount">Transfer amount</string>
    <string name="enter_the_transfer_amount">Enter the transfer amount</string>
    <string name="cancel">Cancel</string>
    <string name="contineu">Continue</string>
    <string name="yes">Yes</string>
    <string name="image_uploaded">Image uploaded</string>
    <string name="image_quote">Do you want to set this picture as your avatar?</string>
    <string name="info_updated">Profile info updated</string>
    <string name="card_added">Card has been added</string>
    <string name="delete">Delete</string>
    <string name="delete_quote">Do you want to delete this card?</string>
    <string name="invalid_code">Invalid code</string>
    <string name="checking">Checking…</string>
    <string name="no_card_found">No card found</string>
    <string name="transfer_success">Transfer has been successful</string>
    <string name="done">Done</string>
    <string name="home">Home</string>
    <string name="transfers">Transfers</string>
</resources>