<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/green">


    <TextView
        android:id="@+id/textView_welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="24dp"
        android:alpha=".7"
        android:fontFamily="@font/poppins_regular"
        android:text="@string/welcome"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/username_tv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:ellipsize="end"
        android:fontFamily="@font/poppins_medium"
        android:maxLines="1"
        android:text="Ravshan Baxranov"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintEnd_toStartOf="@+id/profile_pic_siv"
        app:layout_constraintStart_toStartOf="@+id/textView_welcome"
        app:layout_constraintTop_toBottomOf="@+id/textView_welcome" />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/profile_pic_siv"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginEnd="24dp"
        android:scaleType="centerCrop"
        android:src="@drawable/img"
        app:layout_constraintBottom_toBottomOf="@+id/username_tv"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView_welcome"
        app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.App.CornerSize50Percent" />


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/balance_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/ic_balance"
        app:layout_constraintTop_toBottomOf="@+id/profile_pic_siv"
        app:layout_constraintVertical_chainStyle="spread"
        tools:layout_editor_absoluteX="16dp">

        <ProgressBar
            android:id="@+id/loading_pb"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginBottom="4dp"
            android:indeterminateDrawable="@drawable/progress"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="@+id/textView7"
            app:layout_constraintStart_toStartOf="@+id/total_sum_tv"
            app:layout_constraintTop_toTopOf="@+id/textView7" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:alpha=".7"
            android:fontFamily="@font/poppins_regular"
            android:gravity="center"
            android:text="@string/total_balance"
            android:textColor="@color/white"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/total_sum_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginVertical="22dp"
            android:autoSizeTextType="uniform"
            android:fontFamily="@font/poppins_semi_bold"
            android:gravity="center"
            android:maxLines="1"
            android:text="450.22 so'm"
            android:textColor="@color/white"
            android:textSize="44sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView7" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/last_transactions"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/last_thirty_days_chart"
        app:layout_constraintStart_toStartOf="@+id/balance_container" />


    <TextView
        android:id="@+id/history_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:drawableEnd="@drawable/ic_baseline_arrow_forward_ios_24"
        android:fontFamily="@font/poppins_regular"
        android:text="@string/history"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/balance_container"
        app:layout_constraintTop_toTopOf="@+id/textView9" />


    <com.github.mikephil.charting.charts.LineChart
        android:id="@+id/last_thirty_days_chart"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginBottom="24dp"
        android:background="@color/green"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent=".4"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>